# ImpactAtmosphere

./: .gitignore  CMakeLists.txt  IW.f  MANIFEST.in  README.md  compile.sh  impact_atm_photochem.sh  photochem_implicit_nickv2.2.f  pyproject.toml  setup.py
EvolveAtm/: Atmosphere.py  EvolveAtm.py  Flux0.txt  Lake.py  LakeAfterImpact.py  Readme.md  __init__.py  photochem_implicit_nickv2.2_wrap.f  photochemistry.py  react_rates.txt  setup.py  sigma.txt  wrap_no_comments.f
EvolveAtm/EvolveAtm/: EvolveAtm.py
EvolveAtm/Example/: Fig6_Zahnle2020.py
Example/: Fig6_Zahnle2020.py
ImpactAtmosphere/: EvolveAtm.py  LakeAfterImpact.py  SteamAtm.py  SteamAtmBase.py  SteamAtmContinuous.py  SteamAtm_1.py  __init__.py  _format.py  citron_interpolation.py  constants.py  coupling.py  coupling.py_save  hydrolysis_rates.py  utils.py
ImpactAtmosphere/data/: Citron_2022_C1.txt  Methanation_Ni.yaml  Methanation_Ni_O2_stick.yaml  Methanation_Ni_original.yaml  Methanation_Ni_zahnle_earth.yaml  earth_125_5-26-2021.rx  earth_125_5-26-2021_modified.rx  notes.md  titan_205_2-10-2021.rx  titan_205_2-10-2021_modified.rx  validation.py  zahnle.cti  zahnle.yaml  zahnle2cti.py  zahnle_earth.cti  zahnle_earth.yaml  zahnle_earth_withS8.cti  zahnle_earth_withS8.yaml
examples/: HCN_rainout.ipynb  Vesta_impact.py  example.py  lake_after_impact.ipynb
src/: CMakeLists.txt  EvolveAtmFort.f90  HCN_transport.f90  climate.f90  climate_wrapper.f90  diffusion.f90  hydrolysis_rates.f90  setup.f90  test.f90
src/cvode/: CMakeLists.txt  _cvode.pyx
src/lapack/: CMakeLists.txt
src/minpack/: CMakeLists.txt  lmdif1.f  lmdif2.f
